--- a/_includes/header/header.html
+++ b/_includes/header/header.html
@@ -110,7 +110,7 @@
             <!-- End Left menu element-->
             <div class="logo-header">
               <a href="#" class="d-inline-flex" aria-label="home Liceo Scientifico Statale Federigo Enriques Livorno" title="vai alla home page">
-                        <div style="width:100%; height:100%;">
+                        <div style="width:64; height:72;">
                           <img src="https://u.g.18f.it/assets/img/logo.png" alt="Icona PNG" style="width:74; height:72; object-fit:contain;" />
                         </div>
                 <div class="h1">
